# ext-ds

./: .clang-format  .editorconfig  .gitignore  .travis.supp  .travis.yml  .valgrindrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COW.php  DRAFT.php  Dockerfile  Dockerfile.alpine  Dockerfile.arch  Dockerfile.debian  LICENSE  README.md  appveyor.yml  composer.json  config.m4  config.w32  dev.sh  docker-compose.yml  ds.h  ext-ds.ini  package.xml  php_decimal.c  php_decimal.h  php_ds.c  php_ds.h  phpunit.xml  sandbox.php  test.php  test.sh  watch.sh
.github/workflows/: main.yml
install/: osx.sh  ubuntu.sh
php/include/: Collection.php  Deque.php  Ds.php  Hashable.php  Map.php  Pair.php  PriorityQueue.php  Queue.php  Sequence.php  Set.php  Stack.php  Vector.php
php/tests/: CollectionTest.php  DequeTest.php  HashableObject.php  MapTest.php  PairTest.php  PriorityQueueTest.php  QueueTest.php  SetTest.php  StackTest.php  VectorTest.php
src/: arginfo.h  buffer.c  buffer.h  common.c  common.h  ds.c  ds.h  ds_common.c  ds_common.h  parameters.h  vector.c  vector.h
src/classes/: php_ce_collection.c  php_ce_collection.h  php_ce_deque.c  php_ce_deque.h  php_ce_ds.c  php_ce_ds.h  php_ce_hashable.c  php_ce_hashable.h  php_ce_map.c  php_ce_map.h  php_ce_pair.c  php_ce_pair.h  php_ce_priority_queue.c  php_ce_priority_queue.h  php_ce_queue.c  php_ce_queue.h  php_ce_sequence.c  php_ce_sequence.h  php_ce_set.c  php_ce_set.h  php_ce_stack.c  php_ce_stack.h  php_ce_vector.c  php_ce_vector.h
src/ds/: ds_deque.c  ds_deque.h  ds_heap.c  ds_heap.h  ds_htable.c  ds_htable.h  ds_map.c  ds_map.h  ds_pair.c  ds_pair.h  ds_pq.c  ds_pq.h  ds_priority_queue.c  ds_priority_queue.h  ds_queue.c  ds_queue.h  ds_seq.c  ds_seq.h  ds_set.c  ds_set.h  ds_stack.c  ds_stack.h  ds_tuple.c  ds_tuple.h  ds_vector.c  ds_vector.h  php_map.c  php_map.h  php_pair.c  php_queue.c  php_set.c  php_set.h  php_stack.c
src/handlers/: php_deque_handlers.c  php_deque_handlers.h  php_map_handlers.c  php_map_handlers.h  php_pair_handlers.c  php_pair_handlers.h  php_priority_queue_handlers.c  php_priority_queue_handlers.h  php_queue_handlers.c  php_queue_handlers.h  php_set_handlers.c  php_set_handlers.h  php_stack_handlers.c  php_stack_handlers.h  php_vector_handlers.c  php_vector_handlers.h
src/internal/: ds_deque.c  ds_deque.h  ds_vector.c  ds_vector.h  php_deque.c  php_deque.h  php_htable.c  php_htable.h  php_map.c  php_map.h  php_pair.c  php_pair.h  php_priority_queue.c  php_priority_queue.h  php_queue.c  php_queue.h  php_set.c  php_set.h  php_stack.c  php_stack.h  php_vector.c  php_vector.h
src/iterators/: php_deque_iterator.c  php_deque_iterator.h  php_htable_iterator.c  php_htable_iterator.h  php_map_iterator.c  php_map_iterator.h  php_priority_queue_iterator.c  php_priority_queue_iterator.h  php_queue_iterator.c  php_queue_iterator.h  php_set_iterator.c  php_set_iterator.h  php_stack_iterator.c  php_stack_iterator.h  php_vector_iterator.c  php_vector_iterator.h
src/php/: arginfo.h  exceptions.h  parameters.h  php_ds_arginfo.h  php_ds_deque.c  php_ds_deque.h  php_ds_parameters.h  php_ds_vector.c  php_ds_vector.h
tests/: cast.phpt  clone.phpt  constants.phpt  empty.phpt  json.phpt  operators.phpt  properties.phpt  reflection.phpt  serialize.phpt
tests/Heap/: allocate.phpt  capacity.phpt  clear.phpt  construct_with_values.phpt  copy.phpt  count.phpt  cow_clone_clear.phpt  cow_clone_comparator.phpt  cow_clone_isolates.phpt  cow_clone_pop.phpt  cow_clone_push.phpt  cow_copy.phpt  cow_deep_chain.phpt  cow_iteration_push.phpt  cow_multiple_clones.phpt  custom_comparator.phpt  destructive_iterator.phpt  isEmpty.phpt  iterator_basic.phpt  iterator_min_heap.phpt  json.phpt  min_heap.phpt  peek.phpt  pop.phpt  push.phpt  serialize.phpt  toArray.phpt
tests/Key/: basic.phpt  hash_collision.phpt  map_comprehensive.phpt  map_remove.phpt  set_comprehensive.phpt  set_contains.phpt
tests/Map/: allocate.phpt  apply.phpt  arrayAccess.phpt  capacity.phpt  clear.phpt  construct.phpt  copy.phpt  count.phpt  cow_clone_apply.phpt  cow_clone_clear.phpt  cow_clone_dimension_unset.phpt  cow_clone_dimension_write.phpt  cow_clone_isolates.phpt  cow_clone_ksort.phpt  cow_clone_offsetSet.phpt  cow_clone_offsetUnset.phpt  cow_clone_put.phpt  cow_clone_putAll.phpt  cow_clone_reverse.phpt  cow_clone_serialize.phpt  cow_clone_sort.phpt  cow_copy.phpt  cow_deep_chain.phpt  cow_iteration_clear.phpt  cow_iteration_put.phpt  cow_iteration_remove.phpt  cow_multiple_clones.phpt  diff.phpt  filter.phpt  first.phpt  get.phpt  hasKey.phpt  hasValue.phpt  intersect.phpt  isEmpty.phpt  iterator_basic.phpt  iterator_mutation_safe.phpt  iterator_nested.phpt  json.phpt  key_objects.phpt  (+23 more)
tests/Pair/: clone.phpt  construct.phpt  debugInfo.phpt  json.phpt  properties.phpt  readonly.phpt  serialize.phpt  toArray.phpt  toString.phpt
tests/Seq/: allocate.phpt  apply.phpt  arrayAccess.phpt  capacity.phpt  clear.phpt  construct.phpt  contains.phpt  copy.phpt  count.phpt  cow_clone_allocate.phpt  cow_clone_apply.phpt  cow_clone_array_access.phpt  cow_clone_clear.phpt  cow_clone_insert.phpt  cow_clone_isolates.phpt  cow_clone_no_mutate.phpt  cow_clone_push.phpt  cow_clone_reverse.phpt  cow_clone_rotate.phpt  cow_clone_serialize.phpt  cow_clone_set.phpt  cow_clone_sort.phpt  cow_clone_unshift_pop_shift.phpt  cow_copy_is_o1.phpt  cow_copy_then_mutate_both.phpt  cow_deep_chain.phpt  cow_iteration_clear.phpt  cow_iteration_multiple_mutations.phpt  cow_iteration_push.phpt  cow_iteration_remove.phpt  cow_iteration_reverse.phpt  cow_iteration_set.phpt  cow_iteration_sort.phpt  cow_multiple_clones.phpt  filter.phpt  find.phpt  first.phpt  get.phpt  insert.phpt  isEmpty.phpt  (+25 more)
tests/Set/: add.phpt  allocate.phpt  arrayAccess.phpt  capacity.phpt  clear.phpt  construct.phpt  contains.phpt  copy.phpt  count.phpt  cow_clone_add.phpt  cow_clone_clear.phpt  cow_clone_isolates.phpt  cow_clone_offsetSet_push.phpt  cow_clone_remove.phpt  cow_clone_reverse.phpt  cow_clone_sort.phpt  cow_copy.phpt  cow_deep_chain.phpt  cow_iteration_add.phpt  cow_iteration_clear.phpt  diff.phpt  (+28 more)
(+431 files in other folders)
