cmake_minimum_required(VERSION 3.8)
project(ds)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/ds/ds_deque.c
        src/ds/ds_deque.h
        src/ds/ds_htable.c
        src/ds/ds_htable.h
        src/ds/ds_map.c
        src/ds/ds_map.h
        src/ds/ds_pair.c
        src/ds/ds_pair.h
        src/ds/ds_pq.c
        src/ds/ds_pq.h
        src/ds/ds_queue.c
        src/ds/ds_queue.h
        src/ds/ds_set.c
        src/ds/ds_set.h
        src/ds/ds_stack.c
        src/ds/ds_stack.h
        src/ds/ds_vector.c
        src/ds/ds_vector.h
        src/php/classes/php_ds_collection_ce.c
        src/php/classes/php_ds_collection_ce.h
        src/php/classes/php_ds_hashable_ce.c
        src/php/classes/php_ds_hashable_ce.h
        src/php/classes/php_ds_map_ce.c
        src/php/classes/php_ds_map_ce.h
        src/php/classes/php_ds_pq_ce.c
        src/php/classes/php_ds_pq_ce.h
        src/php/classes/php_ds_queue_ce.c
        src/php/classes/php_ds_queue_ce.h
        src/php/classes/php_ds_sequence_ce.c
        src/php/classes/php_ds_sequence_ce.h
        src/php/classes/php_ds_set_ce.c
        src/php/classes/php_ds_set_ce.h
        src/php/classes/php_ds_stack_ce.c
        src/php/classes/php_ds_stack_ce.h
        src/php/handlers/php_common_handlers.c
        src/php/handlers/php_common_handlers.h
        src/php/handlers/php_map_handlers.c
        src/php/handlers/php_map_handlers.h
        src/php/handlers/php_pq_handlers.c
        src/php/handlers/php_pq_handlers.h
        src/php/handlers/php_queue_handlers.c
        src/php/handlers/php_queue_handlers.h
        src/php/handlers/php_sequence_handlers.c
        src/php/handlers/php_sequence_handlers.h
        src/php/handlers/php_set_handlers.c
        src/php/handlers/php_set_handlers.h
        src/php/handlers/php_stack_handlers.c
        src/php/handlers/php_stack_handlers.h
        src/php/iterators/php_htable_iterator.c
        src/php/iterators/php_htable_iterator.h
        src/php/iterators/php_map_iterator.c
        src/php/iterators/php_map_iterator.h
        src/php/iterators/php_pq_iterator.c
        src/php/iterators/php_pq_iterator.h
        src/php/iterators/php_queue_iterator.c
        src/php/iterators/php_queue_iterator.h
        src/php/iterators/php_sequence_iterator.c
        src/php/iterators/php_sequence_iterator.h
        src/php/iterators/php_set_iterator.c
        src/php/iterators/php_set_iterator.h
        src/php/iterators/php_stack_iterator.c
        src/php/iterators/php_stack_iterator.h
        src/php/objects/php_map.c
        src/php/objects/php_map.h
        src/php/objects/php_pq.c
        src/php/objects/php_pq.h
        src/php/objects/php_queue.c
        src/php/objects/php_queue.h
        src/php/objects/php_sequence.c
        src/php/objects/php_sequence.h
        src/php/objects/php_set.c
        src/php/objects/php_set.h
        src/php/objects/php_stack.c
        src/php/objects/php_stack.h
        src/php/objects/php_vector.c
        src/php/objects/php_vector.h
        src/php/arginfo.h
        src/php/parameters.h
        src/common.c
        src/common.h
        config.h
        php_ds.c
        php_ds.h)

add_executable(ds ${SOURCE_FILES})